<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#252525"
    tools:context="teamawesome.alertme.Conditions">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conditions_submit"
        android:onClick="toTimeFrame"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="226dp"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:paddingBottom="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d0d0d0"
            android:id="@+id/tempValue"
            android:layout_gravity="center_horizontal"
            android:layout_toLeftOf="@+id/textView7"/>

        <SeekBar
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:paddingBottom="35sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precipitation"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:paddingBottom="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d0d0d0"
            android:id="@+id/precipValue"
            android:layout_gravity="center_horizontal" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar2"
            android:max="100"
            android:paddingBottom="35sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:paddingBottom="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d0d0d0"
            android:id="@+id/windValue"
            android:layout_gravity="center_horizontal" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar3"
            android:max="50"
            android:paddingBottom="25sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_chance"
        android:id="@+id/textView"
        android:textSize="15sp"
        android:textColor="#d0d0d0"
        android:layout_marginTop="104dp"
        android:layout_below="@+id/temp_switch"
        android:layout_alignEnd="@+id/temp_switch" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/deg_c"
        android:textOn="@string/deg_f"
        android:showText="true"
        android:id="@+id/temp_switch"
        android:layout_marginStart="42dp"
        android:layout_marginTop="52dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/linearLayout" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wind_switch"
        android:textOff="@string/kph"
        android:textOn="@string/mph"
        android:showText="true"
        android:layout_marginTop="109dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/temp_switch" />

</RelativeLayout>
