<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#252525"
    tools:context="teamawesome.alertme.TimeFrame">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_frame_check"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_frame_submit"
        android:onClick="toAlarmList"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_frame_week"
        android:textColor="#d0d0d0"
        android:id="@+id/weekday"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_frame_weekend"
        android:textColor="#d0d0d0"
        android:id="@+id/weekend"
        android:layout_alignBottom="@+id/weekday"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_frame"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:id="@+id/textView3"
        android:layout_above="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="45dp" />

    <ImageButton
        android:layout_width="36sp"
        android:layout_height="36sp"
        android:src="@drawable/info_icon"
        android:background="@null"
        android:onClick="showInfo"
        android:id="@+id/button3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_time"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:id="@+id/textView4"
        android:layout_above="@+id/timePicker"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:id="@+id/textView5"
        android:layout_alignTop="@+id/switch1"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="Off"
        android:textOn="On"
        android:showText="true"
        android:textColor="#d0d0d0"
        android:id="@+id/switch1"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/timePicker"
        android:layout_alignStart="@+id/daySpanSwitch" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:id="@+id/textView6"
        android:layout_below="@+id/switch1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox11"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignLeft="@+id/switch1"
        android:layout_alignStart="@+id/switch1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarTextView"
        android:textColor="#d0d0d0"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_centerVertical="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="12"
        android:textOn="24"
        android:showText="true"
        android:id="@+id/daySpanSwitch"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignStart="@+id/weekend" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeDisplay"
        android:textSize="30dp"
        android:textColor="#d0d0d0"
        android:layout_alignTop="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Time"
        android:id="@+id/timePicker"
        android:layout_below="@+id/seekBarTextView"
        android:layout_toEndOf="@+id/button3" />

</RelativeLayout>
